apps/guestbook/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # DevSecOps Enforcement: Force NGINX to communicate securely inside the cluster
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: guestbook.app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-service
            port:
              number: 443
  tls:
  - hosts:
    - guestbook.app.local
    secretName: guestbook-tls-secret # Secret that holds the SSL certificate
